# Recursia

./: .gitignore  README.md  run.bat  run.sh
.github/workflows/: ci.yml
backend/: .env.example  README.md  main.py  pyproject.toml
backend/app/: __init__.py  config.py
backend/app/adapters/: __init__.py  llm_client.py  llm_factory.py
backend/app/api/: __init__.py  events.py  personas.py  runs.py
backend/app/domain/: __init__.py  enums.py  events.py  models.py  policies.py
backend/app/observability/: logging.py  metrics.py
backend/app/schemas/: api.py  contracts.py
backend/app/services/: __init__.py  checker.py  divider.py  event_stream.py  executor.py  merger.py  orchestrator.py  persona_registry.py  persona_router.py  stubs.py  worker.py
backend/app/state/: __init__.py  memory_repo.py  repository.py  sqlite_repo.py
backend/app/state/sql/: schema.sql
backend/tests/integration/: test_checker_fail_x3_hitl.py  test_full_run_pipeline.py  test_sqlite_repo_resume.py  test_sse_reconnect_replay.py
backend/tests/unit/: test_checker_policy.py  test_config_env_loading.py  test_divider_service.py  test_event_stream_sse.py  test_json_extraction.py  test_merger_service.py  test_persona_registry.py  test_recursive_executor.py  test_retry_prunes_children.py  test_runs_api.py  test_system_ready.py  test_worker_service.py
frontend/: .env.local.example  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/src/app/: layout.tsx  page.tsx
personas/: python_developer.md  sql_developer.md
(+27 files in other folders)
